--- a/star-wars/package.json
+++ b/star-wars/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "sass": "^1.62.0"
   },
   "devDependencies": {
